Wed Nov 16 19:51:39 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bseloopfuncs.c (gsl_data_find_loop5): Fixed score
	normalization to a per-sample error. Adapted the "premature abort
	score" for the headloop/tailloop functions accordingly.

Wed Nov 16 19:36:59 2005  Tim Janik  <timj@gtk.org>

	* docs/Makefile.am: disable docu build system.

	* tools/bseloopfuncs.c (gsl_data_find_loop5): adjust frame size to 
	roughly 10ms.

Wed Nov 16 00:01:12 2005  Tim Janik  <timj@gtk.org>

	* tools/bsewavetool.cc: loop through chunks in ascending order in the
	loop finder.

Tue Nov 15 21:59:52 2005  Tim Janik  <timj@gtk.org>

	* tools/bseloopfuncs.c (gsl_data_find_loop5): fixed loop bounds 
	calculations to properly account for frame lengths. fixed premature
	loop aborts (was buggy due to load balancing in the inner loop).
	fixed accomplished with assitence of stefan.

	* tools/bseloopfuncs.h: properly document loop5.

Tue Nov 15 19:58:00 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsescminterp.c: Added functions bse-proxy-is-null? and
	bse-proxy-get-null, to deal with SfiProxy values for a NULL proxy.
	Removed obsolete functions bse-is-null and bse-null-proxy?.

	* tools/bseloopfuncs.[hc]: Provide the necessary API to export a
	number of score details which the loop code used to determine the
	overall loop score.

	* tools/bsewavetool.cc: Use loop5 instead of loop1 as loop algorithm;
	store loop algorithm, score and score details within the resulting
	looped sample.
	Implemented a new "thinout" command, which reduces the number of
	chunks in an instrument. An error criterium is used to determine
	removing (and keeping) which chunks results in an "optimal" chunk
	subset. Currently, this error criterium is based mainly on the loop
	score, but it remains to be seen whether this will be appropriate for
	our use case.
	There are two implemented optimization algorithms to actually find the
	"optimal" subset: a simple greedy algorithm, which is fast, and a