@@ -44,6 +44,26 @@ typedef struct {
   double        detail_scores[64];
 } GslDataLoopConfig;
 
+/*
+ * 0db ----------           __________
+ *                         /
+ *                        /
+ *                       /
+ * f1_level (dB) - _____/
+ *
+ *                      |   |
+ *                      f1 f2
+ *
+ * @freq1: high pass start frequency [0:PI] (SR = 2*PI)
+ * @freq2: high pass end frequency [0:PI] (SR = 2*PI)
+ * @freq1_level_db: stopband attenuation
+ */
+
+GslDataHandle *gsl_loop_highpass_handle (GslDataHandle *src_handle,
+				         gdouble       freq1,
+				         gdouble       freq1_level_db,
+				         gdouble       freq2);
+
 /* mem-cached loop position and size finder. tests through all possible
  * loop sizes around center points determined by block/(analysis_points+1).
  * uses full-block comparisons (centering comparison area around the
